fix: improve Textarea overflow in dark mode

--- a/src/components/forms/Label/Label.module.css
+++ b/src/components/forms/Label/Label.module.css
@@ -10,19 +10,6 @@
   box-shadow: 0 0 0 1px var(--color-input);
 }
 
-.label::after {
-  display: block;
-  content: '';
-  position: absolute;
-  right: var(--spacing-m);
-  bottom: 0;
-  left: var(--spacing-m);
-  height: var(--spacing-xs);
-  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  pointer-events: none;
-  transition: background-color var(--transition-micro);
-}
-
 .label:hover {
   box-shadow: 0 0 0 1px var(--color-input-hover);
 }
